alteração em pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/pages/index.html">teste2</a>
-    
+    <a href="index1.html">Teste1</a>
 </body>
 </html>
